# testrepo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  MathUtils.cpp  MathUtils.h  README.md  README_CPP.md  StringUtils.cpp  StringUtils.h  dynamic_array.h  main.cpp  program
.github/workflows/: release.yaml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
